# LazyCommand

./: CMakeLists.txt  README.md  lc_config.txt
.github/workflows/: release.yml
src/: config.c  config.h  init.c  init.h  main.c  pathutil.c  pathutil.h  strbuf.c  strbuf.h  template.c  template.h
